[package]
name = "advent"
version = "0.1.0"
authors = ["pixeljoelson <pixeljoelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
timed = "0.1.5"
regex = "1.4.2"
lazy_static = "1.4.0"


[[bin]]
name = "2020-1"
path = "src/2020/1/main.rs"

[[bin]]
name = "2020-2"
path = "src/2020/2/main.rs"
